[build-system]
# requires = ["setuptools >= 40.6.0", "wheel"]
requires = ["hatchling", "wheel"]

# build-backend = "setuptools.build_meta"
build-backend = "hatchling.build"

[project]
name="highla"
dynamic = [ "version" ]
keywords = [ "top", "load average", "diagnostic", "monitoring", "netstat", "uptime", "usage", "load", "load-average", "mysql", "mariadb", "postgresql", "performance", "ddos" ]

dependencies = [
    'psutil >= 6.0.0',
]
authors = [
  { name="Yaroslav Polyakov", email="yaroslaff@gmail.com" },
]
description = "Run diagnostics on high Load Average"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring"
]

[project.urls]
Homepage = "https://github.com/yaroslaff/highla"
Issues = "https://github.com/yaroslaff/highla/issues"


[project.scripts]
highla = "highla.main:main"

[tool.hatch.version]
path = 'highla/version.py'
